# student_record

./: CMakeLists.txt
lib/COURSE/: COURSE.cpp  COURSE.h
lib/GRADE/: GRADE.cpp  GRADE.h
lib/STUDENT/: STUDENT.cpp  STUDENT.h
src/: main.cpp
